# W26-Applied-Research-Voice-Agent

./: .gitignore  README.md  pyproject.toml  railway.json  requirements-api.txt  requirements.txt
docs/: API.md  ARCHITECTURE.md  DECISIONS.md  SETUP.md  architecture.md
docs/api-specs/: api-spec.md
docs/diagrams/: architecture.md
docs/test-results/: 2026-02-19-timing-error-handling.md  2026-02-24-cloud-agent-performance.md  2026-02-24-whisper-hallucination-testing.md  2026-03-02-expanded-fields-testing.md  2026-03-02-local-agent-baseline.md  2026-03-03-dashboard-functional-smoke.md  2026-03-04-dashboard-edge-cases.md  2026-03-10-local-agent-prompt-improvements.md  2026-03-11-cloud-agent-prompt-validation.md  2026-03-12-onboarding-field-order-validation.md  2026-03-13-newlocal-agent-.md  2026-03-16-post-migration-cloud-validation.md  2026-03-16-post-migration-local-validation.md  2026-03-25-openrouter-llm-integration.md  2026-03-30-local-pipeline-post-fixes-validation.md  2026-03-31-api-pipeline-validation.md  2026-03-31-openrouter-pipeline-post-fixes-validation.md  2026-04-01-groq-llm-test-validation.md  2026-04-06-api-unit-tests-validation.md  2026-04-06-groq-api-pipeline-validation.md  2026-04-06-openai-api-pipeline-validation.md  README.md
src/api/: api.py  main.py
src/app/: config.py  main.py
tests/: conftest.py  openrouter_test.py  pipeline_test.py  stress_test.py  test_voice_agent.py
tests/integration/: test_api_sess.py  test_groq_sess.py  test_pipelines_sess.py
tests/old/: test_voice_agent.py
tests/unit/: test_api.py  test_groq.py  test_pipeline.py  (+1 more)
(+17 files in other folders)
